--- a/task1/src/app/auth-page/auth-page.component.css
+++ b/task1/src/app/auth-page/auth-page.component.css
@@ -5,3 +5,11 @@
     flex-direction: column;
     justify-content: center;
 }
+.error{
+    margin-top: 1em;
+    padding: 0.4em;
+    border: 1px solid rgb(255, 105, 105);
+    background-color: rgba(255, 105, 105, 0.4);
+    border-radius: 5px;
+    display: none;
+}
