router defender + login page + header

--- a/task1/src/app/login-page/login-page.component.css
+++ b/task1/src/app/login-page/login-page.component.css
@@ -13,9 +13,9 @@
     border-radius: 5px;
     display: none;
 }
-.submitRegistration{
+.submitLogining{
     width: 100%;
 }
-.toLoginPage{
+.toRegistrationPage{
     margin-top: 0.5em;
 }
