--- a/task1/src/app/main-page/main-page.component.html
+++ b/task1/src/app/main-page/main-page.component.html
@@ -1,4 +1,5 @@
+
 <h1>
   main-page works!
 </h1>
-<a routerLink="/authentification">Authentification Page</a>
+<a routerLink="/registration">Authentification Page</a>
