--- a/task1/src/app/auth-page/auth-page.component.html
+++ b/task1/src/app/auth-page/auth-page.component.html
@@ -1,6 +1,5 @@
 <div class="col-sm-4 authPage">
   <h1>{{title}}</h1>
-  <a routerLink="/">Main Page</a>
   <form [formGroup]="registerForm" (submit)="addNewUser();">
     <div class="form-group">
       <label>First Name</label>
@@ -20,8 +19,8 @@
     </div>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
-      <input formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" type="email" class="form-control" id="exampleInputEmail1"
-        aria-describedby="emailHelp" placeholder="type your email here...">
+      <input formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" type="email"
+        class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="type your email here...">
       <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
         <div *ngIf="f.email.errors.required">Email is required</div>
         <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
@@ -30,14 +29,15 @@
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" type="password" class="form-control" id="exampleInputPassword1"
-        placeholder="type your password here...">
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">Password is required</div>
-            <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-        </div>
+      <input formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" type="password"
+        class="form-control" id="exampleInputPassword1" placeholder="type your password here...">
+      <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+        <div *ngIf="f.password.errors.required">Password is required</div>
+        <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+      </div>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn submitRegistration btn-primary">Submit</button>
+    <p class="toLoginPage"> Already have an account? <a routerLink="/login">Login.</a></p>
   </form>
 </div>
 
