--- a/task1/src/app/data-table/data-table.component.css
+++ b/task1/src/app/data-table/data-table.component.css
@@ -1,19 +1,18 @@
-.mat-elevation-z8{
-  width: 50vw;
+.mat-elevation-z8 {
+  width: 40vw;
+  margin: 0 auto;
+  margin-top: 1em;
 }
+
 .full-width-table {
   width: 100%;
 }
-.iconbutton{
+
+.iconbutton {
   margin-top: 0.3em;
   margin-left: 1em;
 }
-.mat-row{
-  border-top: 1px solid #000;
-}
-.mat-row:nth-last-child(1){
-  border-bottom: 1px solid #000;
-}
-.mat-row:hover{
+
+.mat-row:hover {
   background-color: #ddd;
 }
