--- a/task1/src/app/edit-modal/edit-modal.component.html
+++ b/task1/src/app/edit-modal/edit-modal.component.html
@@ -1,8 +1,29 @@
-<h1 mat-dialog-title>Hi {{item.name}}</h1>
+<h1 mat-dialog-title>Editing {{item.name}}</h1>
 <div mat-dialog-content>
-  <p>What's your favorite animal?</p>
+
+  <form [formGroup]="editItemForm">
+    <mat-form-field class="example-full-width mr-md-3">
+      <input formControlName="name" matInput placeholder="item name" value="{{item.name}}">
+    </mat-form-field>
+    <mat-form-field class="example-full-width mr-md-3">
+      <input formControlName="image" matInput placeholder="item image" value="{{item.image}}">
+    </mat-form-field>
+
+    <div class="example-full-width imageLayout">
+      <img width="50%" src="{{item.image}}" alt="{{item.name}}">
+    </div>
+
+    <mat-form-field class="example-full-width mr-md-3">
+      <textarea formControlName="description" matInput placeholder="item description" value="{{item.description}}"></textarea>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width mr-md-3">
+      <input formControlName="price" matInput placeholder="item price" value="{{item.price}}">
+    </mat-form-field>
+  </form>
+
 </div>
 <div mat-dialog-actions>
-  <button mat-button>No Thanks</button>
-  <button mat-button>Ok</button>
+  <button (click)="closeModal();" mat-button>Cancle editing</button>
+  <button (click)="edit(editItemForm, item.id);" mat-button>Edit</button>
 </div>
