--- a/task1/src/app/header/header.component.css
+++ b/task1/src/app/header/header.component.css
@@ -1,6 +1,3 @@
-.bg-light {
-    box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.5);
-}
 
 .navigationBar {
     width: 100%;
@@ -35,12 +32,32 @@
     height: 40px;
     border-radius: 50%;
 }
+.shoppingCartBtnToggle{
+    margin-right: 1em;
+    background-color: transparent;
+    color: coral;
+    border: 1px solid #666;
+    border-radius: 5px;
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+.shoppingCartBtnToggle:hover{
+    border: 1px solid coral;
+}
 
 .userAvatar img {
     width: 100%;
     border-radius: 50%;
 }
 
+.helloSpan{
+    color: #444;
+}
+
 .logout {
     cursor: pointer;
+}
+i{
+    font-weight: bolder;
 }
