--- a/task1/src/app/items-data-table/items-data-table.component.css
+++ b/task1/src/app/items-data-table/items-data-table.component.css
@@ -1,5 +1,7 @@
 .mat-elevation-z8{
-  width: 50vw;
+  width: 40vw;
+  margin: 0 auto;
+  margin-top: 1em;
 }
 .full-width-table {
   width: 100%;
@@ -8,12 +10,12 @@
   margin-top: 0.3em;
   margin-left: 1em;
 }
-.mat-row{
-  border-top: 1px solid #000;
-}
-.mat-row:nth-last-child(1){
-  border-bottom: 1px solid #000;
-}
 .mat-row:hover{
   background-color: #ddd;
+}
+.createNewItemBtn{
+  width: 100%;
+  height: 2em;
+  background-color: coral;
+  color: #fff;
 }
