--- a/task1/src/app/items-data-table/items-data-table.component.html
+++ b/task1/src/app/items-data-table/items-data-table.component.html
@@ -21,12 +21,12 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>Actions </mat-header-cell>
       <mat-cell *matCellDef="let row">
-        <button mat-raised-button (click)="editItem(row)"  matTooltip="Click to Edit" class="iconbutton btn btn-primary"
+        <button mat-raised-button (click)="editItem(row)" matTooltip="Click to Edit" class="iconbutton btn"
           color="primary">
           Edit
         </button>
-        <button (click)="deleteItem(row.id)"  matTooltip="Click to Delete"
-          class="iconbutton btn btn-warning" color="warn">
+        <button mat-raised-button (click)="deleteItem(row.id)" matTooltip="Click to Delete" class="iconbutton btn"
+          color="warn">
           Delete
         </button>
       </mat-cell>
@@ -36,6 +36,8 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="10">
+  <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="50"
+    [pageSizeOptions]="[25, 50, 100, 250]">
   </mat-paginator>
+  <button class="createNewItemBtn" (click)="createNewItem();">Create new item</button>
 </div>
