--- a/task1/src/app/store-list/store-list.component.css
+++ b/task1/src/app/store-list/store-list.component.css
@@ -1,44 +1,83 @@
-.list{
+.list {
     width: 100%;
-    min-height: calc(100vh - 3.5em);
+    min-height: calc(100vh - 9.5em);
+    padding: 2em;
+}
+
+.content {
+    padding-top: 6em;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
-.itemCard{
+
+.itemCard {
     width: 250px;
     height: 400px;
     padding: 15px;
+    background-color: rgba(255, 255, 255, 0.8);
     cursor: pointer;
     box-shadow: 1px 1px 3px 1px #ccc;
     margin-top: 2em;
     position: relative;
-    border-radius:5px;
-    -webkit-border-radius:5px;
-    -moz-border-radius:5px;
-    -ms-border-radius:5px;
-    -o-border-radius:5px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
     transition: 0.2s;
     -webkit-transition: 0.2s;
     -moz-transition: 0.2s;
     -ms-transition: 0.2s;
     -o-transition: 0.2s;
 }
-.itemCard:hover{
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
+
+.itemCard:hover {
+    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -o-transform: scale(1.05);
 }
-.imgLayout{
+
+.imgLayout {
     width: 90%;
     margin: 0 auto;
     padding-bottom: 0.5em;
+    text-align: center;
 }
-img{
-    width: 100%;
+
+img {
+    height: 150px;
 }
-span{
+
+span {
     color: royalblue;
+}
+
+.name {
+    font-weight: bold;
+}
+
+.price {
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+}
+
+.addToCart{
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    background-color: transparent;
+    border: 1px solid #666;
+    color: #666;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.addToCart:hover{
+    border-color: coral;
+    color: #333;
 }
