--- a/task1/src/app/header/header.component.css
+++ b/task1/src/app/header/header.component.css
@@ -46,6 +46,70 @@
     border: 1px solid coral;
 }
 
+.shoppingCart{
+    width: 350px;
+    height: 450px;
+    overflow: auto;
+    position: absolute;
+    padding: 15px;
+    bottom: -470px;
+    background-color: #fff;
+    border: 1px solid #666;
+    box-shadow: 2px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+}
+
+.shoppingCart ul{
+    margin: 0;
+    list-style: none;
+    padding: 0;
+}
+
+.listElement{
+    width: 100%;
+    height: 4em;
+    position: relative;
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #666;
+    transition: 0.2s;
+}
+
+.listElement:hover{
+    background-color: #eee;
+}
+
+.badge{
+    margin-left: 0.5em;
+    background-color: coral;
+}
+
+.priceAndDelete{
+    color: royalblue;
+    position: absolute;
+    right: 0px;
+}
+
+.listElement:nth-last-child(1){
+    border-bottom: 0;
+}
+
+.deleteItem{
+    background-color: transparent;
+    border-radius: 5px;
+    border: 0;
+    color: #666;
+    margin-left: 0.3em;
+    transition: 0.2s;
+}
+
+.deleteItem:hover{
+    color: coral;
+}
+
 .userAvatar img {
     width: 100%;
     border-radius: 50%;
