--- a/task1/src/app/header/header.component.css
+++ b/task1/src/app/header/header.component.css
@@ -31,6 +31,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    cursor: pointer;
 }
 .shoppingCartBtnToggle{
     margin-right: 1em;
@@ -174,7 +175,8 @@ i{
 }
 
 .itemImagesFromCart li{
-    padding: 1em;
+    height: 100%;
+    padding: 2em;
 }
 
 .itemImagesFromCart .badge{
@@ -185,7 +187,7 @@ i{
 
 .itemImagesFromCart img{
     width: 50px;
-    height: 50px;
+    height: 100%;
 }
 
 .itemImagesFromCart::-webkit-scrollbar {
