--- a/task1/src/app/header/header.component.html
+++ b/task1/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light ">
-  <a class="navbar-brand" href="/">Brand</a>
+  <a class="navbar-brand" routerLink="/">Brand</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto navigationBar">
       <li class="nav-item">
-        <a class="nav-link" href="/admin">Admin</a>
+        <a class="nav-link" routerLink="/admin">Admin</a>
       </li>
 
       <div class="greetingLayout">
@@ -26,7 +26,7 @@
           </div>
         </li>
         <li class="nav-item userGreeting">
-          <div class="userAvatar">
+          <div (click)="openUserInfo();" class="userAvatar">
             <img src="https://www.stickpng.com/assets/images/585e4bf3cb11b227491c339a.png" alt="Avatar">
           </div>
           <span class="nav-link ">Hello, {{userFirstName}}</span>
