--- a/task1/src/app/item-detail/item-detail.component.html
+++ b/task1/src/app/item-detail/item-detail.component.html
@@ -1,7 +1,12 @@
-<div class="container itemDetail" *ngIf="item != null">
-  <div class="infoCard">
-    <img src="{{item.image}}" alt="{{item.name}}">
-    <h1>{{item.name}}</h1>
-    <p>{{item.description}}</p>
+<div class="itemDetail">
+  <div class="container" *ngIf="item != null">
+    <div class="infoCard">
+      <img src="{{item.image}}" alt="{{item.name}}">
+      <p class="price">Price: {{item.price}}</p>
+      <button (click)="addToCart(item);" class="addToCart"><i class="fas fa-cart-plus"></i> Add to cart</button>
+    </div>
+    <span>
+      <h1>{{item.name}}</h1>{{item.description}}
+    </span>
   </div>
 </div>
