--- a/task1/src/app/main-page/main-page.component.css
+++ b/task1/src/app/main-page/main-page.component.css
@@ -1,1 +1,5 @@
-
+.mainPage {
+    width: 100%;
+    min-height: calc(100vh - 3.5em);
+    background: url(../../images/background.png) right repeat-y;
+}
