--- a/task1/src/app/login-page/login-page.component.css
+++ b/task1/src/app/login-page/login-page.component.css
@@ -4,6 +4,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    background: url(../../images/background.png) right no-repeat / cover;
+}
+.col-sm-4{
+    
 }
 .error{
     margin-top: 1em;
