--- a/task1/src/app/login-page/login-page.component.html
+++ b/task1/src/app/login-page/login-page.component.html
@@ -1,20 +1,23 @@
-<div class="col-sm-4 authPage">
-  <h1>{{title}}</h1>
-  <form [formGroup]="loginForm" (submit)="login();">
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1"
-        aria-describedby="emailHelp" placeholder="email@example.com">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1"
-        placeholder="password">
-    </div>
-    <button type="submit" class="btn submitLogining btn-primary">Submit</button>
-    <p class="toRegistrationPage"> You don't have registered yet? <a routerLink="/registration">Registration.</a></p>
-  </form>
+<div class="authPage">
+  <div class="col-sm-4">
+    <h1>{{title}}</h1>
+    <form [formGroup]="loginForm" (submit)="login();">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1"
+          aria-describedby="emailHelp" placeholder="email@example.com">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1"
+          placeholder="password">
+      </div>
+      <button type="submit" class="btn submitLogining btn-primary">Submit</button>
+      <p class="toRegistrationPage"> You don't have registered yet? <a routerLink="/registration">Registration.</a></p>
+    </form>
+  </div>
 </div>
+
 
 
 <router-outlet></router-outlet>
