--- a/task1/src/app/store-list/store-list.component.css
+++ b/task1/src/app/store-list/store-list.component.css
@@ -4,27 +4,27 @@
     padding: 2em;
 }
 
+form{
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 .content {
-    padding-top: 6em;
+    padding-top: 4em;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
 
 .itemCard {
-    width: 250px;
+    width: 25%;
     height: 400px;
     padding: 15px;
     background-color: rgba(255, 255, 255, 0.8);
     cursor: pointer;
-    box-shadow: 1px 1px 3px 1px #ccc;
-    margin-top: 2em;
+    border: 1px solid #f1f1f1;
     position: relative;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
     transition: 0.2s;
     -webkit-transition: 0.2s;
     -moz-transition: 0.2s;
@@ -33,11 +33,7 @@
 }
 
 .itemCard:hover {
-    transform: scale(1.05);
-    -webkit-transform: scale(1.05);
-    -moz-transform: scale(1.05);
-    -ms-transform: scale(1.05);
-    -o-transform: scale(1.05);
+    background-color: rgba(238, 238, 238, 0.7);
 }
 
 .imgLayout {
