--- a/task1/src/app/store-list/store-list.component.html
+++ b/task1/src/app/store-list/store-list.component.html
@@ -1,11 +1,10 @@
 <div class="container list">
     <form>
-        <input [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" (keyup)=search() class="form-control mr-sm-2" type="search" placeholder="search..."
-            aria-label="Search">
+        <input class="form-control mr-sm-2 searchInput" placeholder="Search" aria-label="State" [formControl]="searchItems">
     </form>
-    <span>{{searchText1}}</span>
+    <h3 *ngIf="isFilteredItemsNull">The search returned no results</h3>
     <div class="content">
-        <div *ngFor="let item of items | filter : searchText" (click)="goToGameDetails(item);" class="itemCard">
+        <div *ngFor="let item of items" (click)="goToGameDetails(item);" class="itemCard">
             <div class="imgLayout">
                 <img src="{{item.image}}" alt="{{item.name}}">
             </div>
