cart page + info change + data fix

--- a/task1/src/app/header/header.component.css
+++ b/task1/src/app/header/header.component.css
@@ -47,6 +47,10 @@
     border: 1px solid coral;
 }
 
+.totalCost{
+    color: royalblue;
+}
+
 .shoppingCart {
     width: 350px;
     height: 450px;
