--- a/task1/src/app/user-info-page/user-info-page.component.html
+++ b/task1/src/app/user-info-page/user-info-page.component.html
@@ -20,7 +20,8 @@
       </div>
       <div class="form-group">
         <label>Your avatar</label>
-        <input formControlName="image" type="text" class="form-control" placeholder="input your image url here...">
+        <input #file type="file" accept='image/*' (change)="preview(file.files)" />
+        <img [src]="imgURL" height="200" *ngIf="imgURL">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
