--- a/task1/src/app/app.component.html
+++ b/task1/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-header *ngIf="isLoggedIn"></app-header>
+<app-header *ngIf="isNotLoggedInUser"></app-header>
 
 <router-outlet></router-outlet>
