--- a/task1/src/app/create-new-item-modal/create-new-item-modal.component.html
+++ b/task1/src/app/create-new-item-modal/create-new-item-modal.component.html
@@ -5,13 +5,8 @@
     <mat-form-field class="example-full-width mr-md-3">
       <input formControlName="name" matInput placeholder="item name">
     </mat-form-field>
-    <mat-form-field class="example-full-width mr-md-3">
-      <input formControlName="image" matInput placeholder="item image">
-    </mat-form-field>
-
-    <div class="example-full-width imageLayout">
-      <img width="50%" src="" alt="">
-    </div>
+    <button type="button" (click)="compressFile()">Upload and compress Image</button>
+    <img *ngIf="imgResultAfterCompress" width="100%" [src]="imgResultAfterCompress" alt="">
 
     <mat-form-field class="example-full-width mr-md-3">
       <textarea formControlName="description" matInput placeholder="item description"></textarea>
