--- a/task1/src/app/header/header.component.css
+++ b/task1/src/app/header/header.component.css
@@ -1,3 +1,6 @@
+.navbar{
+    z-index: 1;
+}
 .navigationBar {
     width: 100%;
     display: flex;
@@ -26,11 +29,31 @@
 }
 
 .userAvatar {
-    background-color: #eee;
     width: 40px;
     height: 40px;
-    border-radius: 50%;
+    background-color: #eee;
     cursor: pointer;
+    position: relative;
+}
+
+.userAvatar img{
+    width: 100%;
+    height: 40px;
+    
+}
+
+.userAvatar::before{
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
 }
 
 .shoppingCartBtnToggle {
@@ -134,11 +157,6 @@
 
 .deleteItem:hover {
     color: coral;
-}
-
-.userAvatar img {
-    width: 100%;
-    border-radius: 50%;
 }
 
 .helloSpan {
