--- a/task1/src/app/auth-page/auth-page.component.html
+++ b/task1/src/app/auth-page/auth-page.component.html
@@ -4,38 +4,38 @@
     <form [formGroup]="registerForm" (submit)="addNewUser();">
       <div class="form-group">
         <label>First Name</label>
-        <input formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" type="text"
+        <input formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && chekInputs.firstName.errors }" type="text"
           class="form-control" placeholder="type your first name here...">
-        <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-          <div *ngIf="f.firstName.errors.required">First Name is required</div>
+        <div *ngIf="submitted && chekInputs.firstName.errors" class="invalid-feedback">
+          <div *ngIf="chekInputs.firstName.errors.required">First Name is required</div>
         </div>
       </div>
       <div class="form-group">
         <label>Second Name</label>
-        <input formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" type="text"
+        <input formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && chekInputs.lastName.errors }" type="text"
           class="form-control" placeholder="type your second name here...">
-        <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-          <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+        <div *ngIf="submitted && chekInputs.lastName.errors" class="invalid-feedback">
+          <div *ngIf="chekInputs.lastName.errors.required">Last Name is required</div>
         </div>
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" type="email"
+        <input formControlName="email" [ngClass]="{ 'is-invalid': submitted && chekInputs.email.errors }" type="email"
           class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
           placeholder="type your email here...">
-        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-          <div *ngIf="f.email.errors.required">Email is required</div>
-          <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+        <div *ngIf="submitted && chekInputs.email.errors" class="invalid-feedback">
+          <div *ngIf="chekInputs.email.errors.required">Email is required</div>
+          <div *ngIf="chekInputs.email.errors.email">Email must be a valid email address</div>
         </div>
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
-        <input formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" type="password"
+        <input formControlName="password" [ngClass]="{ 'is-invalid': submitted && chekInputs.password.errors }" type="password"
           class="form-control" id="exampleInputPassword1" placeholder="type your password here...">
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-          <div *ngIf="f.password.errors.required">Password is required</div>
-          <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+        <div *ngIf="submitted && chekInputs.password.errors" class="invalid-feedback">
+          <div *ngIf="chekInputs.password.errors.required">Password is required</div>
+          <div *ngIf="chekInputs.password.errors.minlength">Password must be at least 6 characters</div>
         </div>
       </div>
       <button type="submit" class="btn submitRegistration btn-primary">Submit</button>
