--- a/task1/src/app/items-data-table/items-data-table.component.html
+++ b/task1/src/app/items-data-table/items-data-table.component.html
@@ -36,8 +36,8 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="50"
-    [pageSizeOptions]="[25, 50, 100, 250]">
+  <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="5"
+    [pageSizeOptions]="[5, 10, 20]">
   </mat-paginator>
   <button class="createNewItemBtn" (click)="createNewItem();">Create new item</button>
 </div>
