lazy load + starting change axios to httpClient

--- a/task1/src/app/create-new-item-modal/create-new-item-modal.component.html
+++ b/task1/src/app/create-new-item-modal/create-new-item-modal.component.html
@@ -20,5 +20,5 @@
 </div>
 <div mat-dialog-actions>
   <button (click)="closeModal();" mat-button>Cancle adding</button>
-  <button (click)="add(addItemForm);" mat-button>Add</button>
+  <button (click)="addItem(addItemForm);" mat-button>Add</button>
 </div>
