--- a/task1/src/app/user-info-page/user-info-page.component.html
+++ b/task1/src/app/user-info-page/user-info-page.component.html
@@ -4,18 +4,18 @@
     <form [formGroup]="userChangeForm" class="col-sm-4" (submit)="changeUser();">
       <div class="form-group">
         <label>First Name</label>
-        <input formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" type="text"
+        <input formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && checkInputs.firstName.errors }" type="text"
           class="form-control" placeholder="type your first name here...">
-        <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-          <div *ngIf="f.firstName.errors.required">First Name is required</div>
+        <div *ngIf="submitted && checkInputs.firstName.errors" class="invalid-feedback">
+          <div *ngIf="checkInputs.firstName.errors.required">First Name is required</div>
         </div>
       </div>
       <div class="form-group">
         <label>Second Name</label>
-        <input formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" type="text"
+        <input formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && checkInputs.lastName.errors }" type="text"
           class="form-control" placeholder="type your second name here...">
-        <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-          <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+        <div *ngIf="submitted && checkInputs.lastName.errors" class="invalid-feedback">
+          <div *ngIf="checkInputs.lastName.errors.required">Last Name is required</div>
         </div>
       </div>
       <div class="form-group">
